--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-body{
-	color:white;
+.header-class{
+	background-image: url(header.jpg);
+	background-size: cover;
+	width: 100%;
+	height: 350px;
 }
+
+.youtube-videos{
+	width: 100%;
+	height: 100px;
+}
+
