--- a/style.css
+++ b/style.css
@@ -1,11 +1,61 @@
-.header-class {
-    background-image: url(header.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 350px;
+.header-class{
+	background-image: url(img3.jpeg);
+	background-size: cover;
+	width: 100%;
+	height: 450px;
+ 	position: relative;
+}
+.inner-header{
+
+ position:absolute;
+  top:0;
+   left:0;
+   width:100%;
+   height:100%;
+   background-color:black;
+   opacity: 0.3; 
+}
+.navbar{
+	font-family: 'Poiret One', cursive;
+}
+body{
+	font-family: 'Playfair Display', serif;
+}
+.card{
+	border-radius: 10px;
+}
+h2 span { 
+   color: white; 
+   font: bold 20px/30px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+}
+h2 span.spacer {
+   padding:0 5px;
+}
+h2 { 
+   position: absolute; 
+   bottom: 30px; 
+   left: 0; 
+   width: 100%; 
+}
+                
+.view {
+    background: url("https://mdbootstrap.com/img/Photos/Others/img (40).jpg")no-repeat center center;
+}
+    
+.navbar {
+    background-color: transparent;
 }
 
-.youtube-videos {
-    width: 100%;
-    height: 100px;
+.top-nav-collapse {
+    background-color: #4285F4;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar {
+        background-color: transparent;
+    }
 }
