--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
 	height: 450px;
  	position: relative;
 }
+.header-class-home{
+  background-image: url(bg-img.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 630px;
+  position: relative;
+}
 .inner-header{
 
  position:absolute;
